# exper-file-io

./: Cargo.toml  README.md
sync-io/: Cargo.toml  README.md
sync-io/src/: main.rs
thread-channel-sync-io/: Cargo.toml  README.md
thread-channel-sync-io/src/: file_io_thread.rs  main.rs
