[package]
name = "thread-channel-sync-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.2.0" }
#log = { version = "0.4.17", features = ["release_max_level_off"] }
log = { version = "0.4.17" }
